--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,26 @@
  *= require_tree .
  *= require_self
  */
+
+#nav{
+  width: 100%;
+  height: 40px;
+  background: #000;
+}
+
+#nav_page a, #items a{
+  line-height: 40px;
+  color: #fff;
+  padding: 0 20px 0 20px;
+  text-decoration: none;
+}
+
+#nav_page a{
+  margin: 0 0 0 5%;
+  float: left;
+}
+
+#items a{
+  margin: 0 5% 0 0;
+  float: right;
+}
