--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,9 @@
  *= require_self
  */
 
+@import "bootstrap-sprockets";
+@import "bootstrap";
+
 #nav{
   width: 100%;
   height: 40px;
@@ -35,4 +38,13 @@
 #items a{
   margin: 0 5% 0 0;
   float: right;
+}
+
+#table td, th{
+  padding: 15px;
+  border-bottom: 1px solid black;
+}
+
+#form {
+  padding: 10px 70px 10px 70px;
 }
