--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,5 +1,5 @@
 <h1> Products by Category </h1>
-
+<div id="table">
 <table class="table">
 <tr>
   <th class= "col-sm-1"> Product </th>
@@ -22,6 +22,8 @@
 </tr>
 <% end %>
 </table>
+</div>
 
 
 
+<!-- some stuff for the cart_path (id) -->
