--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,8 +14,12 @@
  *= require_self
  */
 
-@import "bootstrap-sprockets";
 @import "bootstrap";
+
+body {
+  width: 90%;
+  margin: auto;
+}
 
 #nav{
   width: 100%;
@@ -42,9 +46,19 @@
 
 #table td, th{
   padding: 15px;
-  border-bottom: 1px solid black;
+  text-align: center;
 }
 
 #form {
-  padding: 10px 70px 10px 70px;
+  padding: 10px 500px 10px 500px;
 }
+
+#row a{
+  padding: -15px;
+  text-align: center;
+}
+
+h1, .h1 {
+  text-align: center;
+}
+
