--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,8 +1,8 @@
 <h1>Products Index by Category</h1>
-
+<div id="table">
 <table class="table">
 <tr>
-  <th class= "col-sm-1"> Category </th>
+  <th class= "col-sm-3"> Category </th>
 </tr>
 
 <% @categories.each do |category, product| %>
@@ -15,3 +15,4 @@
 </tr>
 <% end %>
 </table>
+</div>
