--- a/app/views/products/_table.html.erb
+++ b/app/views/products/_table.html.erb
@@ -2,9 +2,9 @@
 <table class="table">
 <tr>
   <th class= "col-sm-1"> Product </th>
-  <th class= "col-sm-1"> Description </th>
+  <th class= "col-sm-3"> Description </th>
   <th class= "col-sm-1"> Price </th>
-  <th class= "col-sm-3"> Category </th>
+  <th class= "col-sm-1"> Category </th>
 </tr>
 
 <% @products.each do |product| %>
@@ -13,7 +13,7 @@
   <td><%= product.description %></td>
   <td><%= product.price %></td>
   <td><%= Category.find(product.category_id).name %></td>
-  <td><%= link_to 'Add to Cart', cart_path %></td>
+  <td><%= link_to 'Add to Cart', add_to_cart_path(product.id) %></td>
   <td><% if current_user.admin? %>
       <%= link_to 'Edit', edit_product_path(:id => product.id) %>
       <% end %></td>
@@ -24,3 +24,5 @@
 <% end %>
 </table>
 </div>
+
+<!-- some stuff for the cart_path (id) -->
