--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,7 @@
 <h1>Sign up</h1>
 
 <div class="row">
+  <div class="col-md-1 col-md-offset-3">
   <%= form_for(@user) do |f| %>
   <%= render 'shared/error_messages' %>
   
@@ -15,7 +16,8 @@
 
   <%= f.label :password_confirmation, "Confirmation" %>
   <%= f.password_field :password_confirmation %>
-
+  <br></br>
   <%= f.submit "Create my account", class: "btn btn-primary" %>
   <% end %>
+</div>
 </div>
