--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -12,7 +12,7 @@
   <td><%= product.name %></td>
   <td><%= product.description %></td>
   <td><%= product.price %></td>
-  <td><%= link_to 'Add to Cart', cart_path %></td>
+  <td><%= link_to 'Add to Cart', add_to_cart_path(product.id) %></td>
   <td><% if current_user.admin? %>
     <%= link_to 'Edit', edit_product_path(:id => product.id) %>
     <% end %></td>
@@ -23,7 +23,3 @@
 <% end %>
 </table>
 </div>
-
-
-
-<!-- some stuff for the cart_path (id) -->
