--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,8 +23,9 @@
       <%= link_to "Categories", categories_path %>
         <% if current_user.admin? %>
         <%= link_to "Cart", cart_path %>
-        <%= link_to "Add New Products", new_product_path %>
-        <%= link_to "Add New Category", new_category_path %>
+        <%= link_to "Add Products", new_product_path %>
+        <%= link_to "Add Category", new_category_path %>
+        <%= link_to "Orders", orders_path %>
         <% end %>
       <% end %>
     </div>
