--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,10 +1,13 @@
+<div class="row">
 <div id="form">
     <%= form_for(@category) do |f| %>
 
       <%= f.label :category_name %>
       <%= f.text_field :name, class: 'form-control' %>
+      <br><br>
 
       <%= f.submit "Add New Category", class: "btn btn-primary" %>
     <% end %>
+</div>
 </div>
 
