--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,25 +1,25 @@
-<div id="form">
+<div class="row">
+  <div id="form">
   <%= form_for(@product) do |f| %>
-<div class="field">
-  <%= f.label :name %><br>
-  <%= f.text_field :name %>
-</div>
-<div class="field">
-  <%= f.label :description %><br>
-  <%= f.text_field :description %>
-</div>
-<div class="field">
-  <%= f.label :price %><br>
-  <%= f.text_field :price %>
-</div>
-<div class="field">
-  <%= f.label :category %><br>
-  <%= f.collection_select(:category_id, Category.all, :id, :name, {:include_blank => "Please select"}, {:required => true}) %>
-</div>
 
-<%= f.submit "SAVE", class: "btn btn-primary" %>
+  <%= f.label :name %>
+  <%= f.text_field :name, class: 'form-control' %><br>
+
+  <%= f.label :description %>
+  <%= f.text_field :description, class: 'form-control' %><br>
+
+  <%= f.label :price %>
+  <%= f.text_field :price, class: 'form-control' %><br>
+
+  <%= f.label :category %><br>
+  <%= f.collection_select(:category_id, Category.all, :id, :name, {:include_blank => 'Please select'}, {:required => true, :class => 'form-control'}) %><br>
+
+<br><br>
+  <%= f.submit "SAVE", class: "btn btn-primary" %>
 
 <% end %>
 </div>
+</div>
+
 
 
