--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -2,9 +2,9 @@
 <div id="table">
 <table class="table">
 <tr>
-  <th class= "col-sm-1"> Product </th>
-  <th class= "col-sm-1"> Description </th>
-  <th class= "col-sm-1"> Price </th>
+  <th> Product </th>
+  <th> Description </th>
+  <th> Price </th>
 </tr>
 
 <% @products.each do |product| %>
