--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -10,7 +10,7 @@
 <% @orders.each do |order| %>
 <tr>
   <td><%= order.id %></td>
-  <td><%= order.created_at %></td>
+  <td><%= order.created_at.strftime("%d %b. %Y") %></td>
   <td><%= link_to 'View Order', order_path(:id => order.id) %></td>
 </tr>
 <% end %>
