--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,6 +1,6 @@
 <h1>Your Cart</h1>
 
-<%= link_to 'Emtpy The Cart', clear_cart_path %>
+<%= link_to 'Empty The Cart', clear_cart_path %>
 <% total = 0 %>
 
 <%= form_for :order do |f| %>
