--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -44,9 +44,18 @@ body {
   float: right;
 }
 
-#table td, th{
+#table td{
   padding: 15px;
   text-align: center;
+  border-top: 1px solid;
+  border-bottom: 1px solid;
+}
+
+#table th{
+  padding: 15px;
+  text-align: center;
+  border-bottom: 1px solid;
+  border-top: none;
 }
 
 #form {
@@ -64,5 +73,7 @@ body {
 
 h1, .h1 {
   text-align: center;
+  padding-bottom: 20px;
+  padding-top: 20px;
 }
 
