--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -12,12 +12,12 @@
   <td><%= product.name %></td>
   <td><%= product.description %></td>
   <td><%= product.price %></td>
-  <td><%= link_to 'Add to Cart', add_to_cart_path(product.id) %></td>
+  <td><%= link_to 'Add to Cart', add_to_cart_path(product.id), :class => "btn btn-primary"  %></td>
   <td><% if current_user.admin? %>
-    <%= link_to 'Edit', edit_product_path(:id => product.id) %>
+    <%= link_to 'Edit', edit_product_path(:id => product.id), :class => "btn btn-info"  %>
     <% end %></td>
   <td><% if current_user.admin? %>
-    <%= link_to 'Destroy', product, method: :delete %>
+    <%= link_to 'Destroy', product, method: :delete, :class => "btn btn-warning"  %>
     <% end %></td>
 </tr>
 <% end %>
